[gd_scene load_steps=7 format=2]

[ext_resource path="res://Levels/FloorV2.tres" type="TileSet" id=1]
[ext_resource path="res://PowerUps/PressureButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Levels/Level.gd" type="Script" id=5]
[ext_resource path="res://PowerUps/Magnet.tscn" type="PackedScene" id=6]
[ext_resource path="res://Sprites/background.png" type="Texture" id=7]

[node name="Level1" type="Node2D"]
script = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}
next_level = "MainMenu/End Screen"

[node name="BackBackground" type="ColorRect" parent="."]
margin_left = -115.913
margin_top = -80.6349
margin_right = 1826.09
margin_bottom = 934.365
color = Color( 0.298039, 0.298039, 0.298039, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
modulate = Color( 0.6, 0.6, 0.6, 1 )
margin_left = -28.5905
margin_top = -23.5451
margin_right = 1654.41
margin_bottom = 929.455
texture = ExtResource( 7 )
stretch_mode = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( 0, 2 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 30, 30 )
show_collision = true
format = 1
tile_data = PoolIntArray( -1, 0, 0, -65536, 0, 1, -65535, 0, 1, -65534, 0, 1, -65533, 0, 1, -65532, 0, 1, -65531, 0, 1, -65530, 0, 1, -65529, 0, 1, -65528, 0, 1, -65527, 0, 1, -65526, 0, 1, -65525, 0, 1, -65524, 0, 1, -65523, 0, 1, -65522, 0, 1, -65521, 0, 1, -65520, 0, 1, -65519, 0, 1, -65518, 0, 1, -65517, 0, 1, -65516, 0, 1, -65515, 0, 1, -65514, 0, 1, -65513, 0, 1, -65512, 0, 1, -65511, 0, 1, -65510, 0, 1, -65509, 0, 1, -65508, 0, 1, -65507, 0, 1, -65506, 0, 1, -65505, 0, 1, -65504, 0, 1, -65503, 0, 1, -65502, 0, 1, -65501, 0, 1, -65500, 0, 1, -65499, 0, 1, -65498, 0, 1, -65497, 0, 1, -65496, 0, 1, -65495, 0, 1, -65494, 0, 1, -65493, 0, 1, -65492, 0, 1, -65491, 0, 1, -65490, 0, 1, -65489, 0, 1, -65488, 0, 1, -65487, 0, 1, -65486, 0, 1, -65485, 0, 1, -65484, 0, 1, -65483, 0, 1, -65482, 0, 2, 65535, 0, 65536, 0, 0, 5, 1, 0, 131073, 2, 0, 131073, 3, 0, 131073, 4, 0, 131073, 5, 0, 131073, 6, 0, 131073, 7, 0, 6, 8, 0, 5, 9, 0, 131073, 10, 0, 131073, 11, 0, 131073, 12, 0, 131073, 13, 0, 131073, 14, 0, 131073, 15, 0, 131073, 16, 0, 131073, 17, 0, 131073, 18, 0, 131073, 19, 0, 131073, 20, 0, 131073, 21, 0, 131073, 22, 0, 131073, 23, 0, 131073, 24, 0, 131073, 25, 0, 131073, 26, 0, 131073, 27, 0, 131073, 28, 0, 131073, 29, 0, 131073, 30, 0, 131073, 31, 0, 131073, 32, 0, 131073, 33, 0, 131073, 34, 0, 131073, 35, 0, 131073, 36, 0, 131073, 37, 0, 131073, 38, 0, 131073, 39, 0, 131073, 40, 0, 131073, 41, 0, 131073, 42, 0, 131073, 43, 0, 131073, 44, 0, 131073, 45, 0, 131073, 46, 0, 131073, 47, 0, 131073, 48, 0, 131073, 49, 0, 131073, 50, 0, 131073, 51, 0, 131073, 52, 0, 131073, 53, 0, 6, 54, 0, 65538, 131071, 0, 65536, 65536, 0, 65538, 65543, 0, 65536, 65544, 0, 65538, 65589, 0, 65536, 65590, 0, 65538, 196607, 0, 65536, 131072, 0, 65538, 131079, 0, 65536, 131080, 0, 65538, 131125, 0, 65536, 131126, 0, 65538, 262143, 0, 65536, 196608, 0, 65538, 196615, 0, 65536, 196616, 0, 65538, 196661, 0, 65536, 196662, 0, 65538, 327679, 0, 65536, 262144, 0, 65538, 262151, 0, 65536, 262152, 0, 65538, 262197, 0, 65536, 262198, 0, 65538, 393215, 0, 65536, 327680, 0, 65538, 327685, 0, 131075, 327686, 0, 131076, 327687, 0, 65546, 327688, 0, 131074, 327733, 0, 65536, 327734, 0, 65538, 458751, 0, 65536, 393216, 0, 65538, 393250, 2, 0, 393251, 2, 0, 393252, 2, 0, 393269, 0, 65536, 393270, 0, 65538, 524287, 0, 65536, 458752, 0, 65538, 458774, 2, 0, 458775, 2, 0, 458777, 2, 0, 458783, 2, 0, 458789, 2, 0, 458790, 2, 0, 458791, 2, 0, 458792, 2, 0, 458793, 2, 0, 458805, 0, 65536, 458806, 0, 65538, 589823, 0, 65536, 524288, 0, 65538, 524329, 2, 0, 524341, 0, 65536, 524342, 0, 65538, 655359, 0, 65536, 589824, 0, 65538, 589865, 2, 0, 589877, 0, 65536, 589878, 0, 65538, 720895, 0, 65536, 655360, 0, 65538, 655401, 2, 0, 655413, 0, 65536, 655414, 0, 65538, 786431, 0, 65536, 720896, 0, 65538, 720937, 2, 0, 720949, 0, 65536, 720950, 0, 65538, 851967, 0, 65536, 786432, 0, 65538, 786485, 0, 65536, 786486, 0, 65538, 917503, 0, 65536, 851968, 0, 65541, 851969, 0, 2, 852021, 0, 65536, 852022, 0, 65538, 983039, 0, 65536, 917504, 0, 5, 917505, 0, 131074, 917557, 0, 65536, 917558, 0, 65538, 1048575, 0, 65536, 983040, 0, 65538, 983092, 0, 0, 983093, 0, 65542, 983094, 0, 65538, 1114111, 0, 65536, 1048576, 0, 65538, 1048628, 0, 131072, 1048629, 0, 6, 1048630, 0, 65538, 1179647, 0, 65536, 1114112, 0, 65538, 1114139, 2, 0, 1114153, 2, 0, 1114165, 0, 65536, 1114166, 0, 65538, 1245183, 0, 65536, 1179648, 0, 65538, 1179651, 2, 0, 1179665, -1610612734, 0, 1179666, -1610612734, 0, 1179667, 2, 0, 1179668, 2, 0, 1179689, 2, 0, 1179701, 0, 65536, 1179702, 0, 65538, 1310719, 0, 65536, 1245184, 0, 65538, 1245187, 2, 0, 1245196, 2, 0, 1245197, 2, 0, 1245198, 2, 0, 1245201, -1610612734, 0, 1245202, -1610612734, 0, 1245203, 2, 0, 1245204, 2, 0, 1245225, 2, 0, 1245237, 0, 65536, 1245238, 0, 65538, 1376255, 0, 65536, 1310720, 0, 65538, 1310723, 2, 0, 1310732, 2, 0, 1310733, 2, 0, 1310734, 2, 0, 1310737, -1610612734, 0, 1310738, -1610612734, 0, 1310739, 2, 0, 1310740, 2, 0, 1310761, 2, 0, 1310773, 0, 65536, 1310774, 0, 65538, 1441791, 0, 65536, 1376256, 0, 65538, 1376259, 2, 0, 1376260, 2, 0, 1376261, 2, 0, 1376262, 2, 0, 1376263, 2, 0, 1376264, 2, 0, 1376265, 2, 0, 1376266, 2, 0, 1376267, 2, 0, 1376268, 2, 0, 1376269, 2, 0, 1376270, 2, 0, 1376271, 2, 0, 1376272, 2, 0, 1376273, 2, 0, 1376274, 2, 0, 1376275, 2, 0, 1376276, 2, 0, 1376277, -1610612734, 0, 1376278, 2, 0, 1376279, 2, 0, 1376280, 2, 0, 1376281, 2, 0, 1376282, 2, 0, 1376283, 2, 0, 1376284, 2, 0, 1376285, 2, 0, 1376286, 2, 0, 1376287, 2, 0, 1376288, 2, 0, 1376289, 2, 0, 1376290, 2, 0, 1376291, 2, 0, 1376292, 2, 0, 1376293, 2, 0, 1376294, 2, 0, 1376295, 2, 0, 1376296, 2, 0, 1376297, 2, 0, 1376309, 0, 65536, 1376310, 0, 65538, 1507327, 0, 65536, 1441792, 0, 65538, 1441804, -1610612734, 0, 1441805, -1610612734, 0, 1441806, -1610612734, 0, 1441809, -1610612734, 0, 1441810, -1610612734, 0, 1441811, -1610612734, 0, 1441812, -1610612734, 0, 1441833, 2, 0, 1441845, 0, 65536, 1441846, 0, 65538, 1572863, 0, 65536, 1507328, 0, 65538, 1507340, -1610612734, 0, 1507341, -1610612734, 0, 1507342, -1610612734, 0, 1507345, -1610612734, 0, 1507346, -1610612734, 0, 1507347, -1610612734, 0, 1507348, -1610612734, 0, 1507369, 2, 0, 1507381, 0, 65536, 1507382, 0, 65538, 1638399, 0, 65536, 1572864, 0, 65538, 1572881, -1610612734, 0, 1572882, -1610612734, 0, 1572883, -1610612734, 0, 1572884, -1610612734, 0, 1572905, 2, 0, 1572909, 0, 0, 1572910, 0, 131080, 1572911, 0, 131076, 1572912, 0, 131077, 1572917, 0, 65536, 1572918, 0, 65538, 1703935, 0, 65536, 1638400, 0, 65538, 1638445, 0, 65536, 1638446, 0, 65538, 1638453, 0, 65536, 1638454, 0, 65538, 1769471, 0, 65536, 1703936, 0, 65538, 1703981, 0, 65536, 1703982, 0, 65538, 1703989, 0, 65536, 1703990, 0, 65538, 1835007, 0, 65536, 1769472, 0, 65538, 1769495, -1610612734, 0, 1769496, -1610612734, 0, 1769497, -1610612734, 0, 1769498, -1610612734, 0, 1769499, -1610612734, 0, 1769517, 0, 65536, 1769518, 0, 65538, 1769525, 0, 65536, 1769526, 0, 65538, 1900543, 0, 65536, 1835008, 0, 65538, 1835011, 2, 0, 1835049, 2, 0, 1835053, 0, 65536, 1835054, 0, 65538, 1835061, 0, 65536, 1835062, 0, 65538, 1966079, 0, 65536, 1900544, 0, 65541, 1900545, 0, 1, 1900546, 0, 1, 1900547, 0, 1, 1900548, 0, 1, 1900549, 0, 1, 1900550, 0, 1, 1900551, 0, 1, 1900552, 0, 1, 1900553, 0, 1, 1900554, 0, 1, 1900555, 0, 1, 1900556, 0, 1, 1900557, 0, 1, 1900558, 0, 1, 1900559, 0, 1, 1900560, 0, 1, 1900561, 0, 1, 1900562, 0, 1, 1900563, 0, 1, 1900564, 0, 1, 1900565, 0, 1, 1900566, 0, 1, 1900567, 0, 1, 1900568, 0, 1, 1900569, 0, 1, 1900570, 0, 1, 1900571, 0, 1, 1900572, 0, 1, 1900573, 0, 1, 1900574, 0, 1, 1900575, 0, 1, 1900576, 0, 1, 1900577, 0, 1, 1900578, 0, 1, 1900579, 0, 1, 1900580, 0, 1, 1900581, 0, 1, 1900582, 0, 1, 1900583, 0, 1, 1900584, 0, 1, 1900585, 0, 1, 1900586, 0, 1, 1900587, 0, 1, 1900588, 0, 1, 1900589, 0, 65542, 1900590, 0, 65541, 1900591, 0, 1, 1900592, 0, 1, 1900593, 0, 1, 1900594, 0, 1, 1900595, 0, 1, 1900596, 0, 1, 1900597, 0, 65542, 1900598, 0, 65538, 2031615, 0, 131072, 1966080, 0, 131073, 1966081, 0, 131073, 1966082, 0, 131073, 1966083, 0, 131073, 1966084, 0, 131073, 1966085, 0, 131073, 1966086, 0, 131073, 1966087, 0, 131073, 1966088, 0, 131073, 1966089, 0, 131073, 1966090, 0, 131073, 1966091, 0, 131073, 1966092, 0, 131073, 1966093, 0, 131073, 1966094, 0, 131073, 1966095, 0, 131073, 1966096, 0, 131073, 1966097, 0, 131073, 1966098, 0, 131073, 1966099, 0, 131073, 1966100, 0, 131073, 1966101, 0, 131073, 1966102, 0, 131073, 1966103, 0, 131073, 1966104, 0, 131073, 1966105, 0, 131073, 1966106, 0, 131073, 1966107, 0, 131073, 1966108, 0, 131073, 1966109, 0, 131073, 1966110, 0, 131073, 1966111, 0, 131073, 1966112, 0, 131073, 1966113, 0, 131073, 1966114, 0, 131073, 1966115, 0, 131073, 1966116, 0, 131073, 1966117, 0, 131073, 1966118, 0, 131073, 1966119, 0, 131073, 1966120, 0, 131073, 1966121, 0, 131073, 1966122, 0, 131073, 1966123, 0, 131073, 1966124, 0, 131073, 1966125, 0, 131073, 1966126, 0, 131073, 1966127, 0, 131073, 1966128, 0, 131073, 1966129, 0, 131073, 1966130, 0, 131073, 1966131, 0, 131073, 1966132, 0, 131073, 1966133, 0, 131073, 1966134, 0, 131074, 2031619, 2, 0, 2031657, 2, 0, 2097155, 2, 0, 2097193, 2, 0, 2162691, 2, 0, 2162729, 2, 0, 2228227, 2, 0, 2228228, 2, 0, 2228229, 2, 0, 2228230, 2, 0, 2228231, 2, 0, 2228232, 2, 0, 2228233, 2, 0, 2228234, 2, 0, 2228235, 2, 0, 2228236, 2, 0, 2228237, 2, 0, 2228238, 2, 0, 2228239, 2, 0, 2228240, 2, 0, 2228241, 2, 0, 2228242, 2, 0, 2228243, 2, 0, 2228244, 2, 0, 2228245, 2, 0, 2228246, 2, 0, 2228247, 2, 0, 2228248, 2, 0, 2228249, 2, 0, 2228250, 2, 0, 2228251, 2, 0, 2228252, 2, 0, 2228253, 2, 0, 2228254, 2, 0, 2228255, 2, 0, 2228256, 2, 0, 2228257, 2, 0, 2228261, 2, 0, 2228262, 2, 0, 2228263, 2, 0, 2228264, 2, 0, 2228265, 2, 0, 2293794, 2, 0, 2293795, 2, 0, 2293796, 2, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Player1" parent="." instance=ExtResource( 4 )]
position = Vector2( 1482.63, 147.363 )
can_fly = true
magnetic_intensity = Vector2( 50, 5 )

[node name="Player2" parent="." instance=ExtResource( 4 )]
position = Vector2( 146.047, 780.226 )
robot = "slim"
polarity = -1
can_fly = true
magnetic_intensity = Vector2( 50, 5 )

[node name="WinConditions" type="Node" parent="."]

[node name="PressureButton" parent="WinConditions" instance=ExtResource( 3 )]
position = Vector2( 789.87, 859.579 )

[node name="PressureButton2" parent="WinConditions" instance=ExtResource( 3 )]
position = Vector2( 797.556, 38.689 )
rotation = -3.14159

[node name="Magnets" type="Node" parent="."]

[node name="Magnet" parent="Magnets" instance=ExtResource( 6 )]
position = Vector2( 680, 224 )
intensity = 4.0

[node name="Magnet3" parent="Magnets" instance=ExtResource( 6 )]
position = Vector2( 920, 216 )
intensity = 4.0

[node name="Magnet2" parent="Magnets" instance=ExtResource( 6 )]
position = Vector2( 912, 680 )
polarity = -1
intensity = 4.0
start_angle = 180.0

[node name="Magnet4" parent="Magnets" instance=ExtResource( 6 )]
position = Vector2( 664, 680 )
polarity = -1
intensity = 4.0
start_angle = 180.0

[node name="Spikes" type="Node" parent="."]
